--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="upcoming">Upcoming</string>
     <string name="favorites">Favorites</string>
     <string name="home">Home</string>
+    <string name="favorites_title">Favorites</string>
+    <string name="trending_movies_title">Trending movies</string>
+    <string name="new_releases_title">New releases</string>
+    <string name="top_billed_cast_title">Top Billed Cast</string>
+    <string name="overview_title">Overview</string>
+    <string name="user_score">User score</string>
 </resources>
